--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
 
     <div class="showpanel">
       Language:中文|<a href="./index_en.html">English</a><br />
-      Windows用户推荐Edge浏览器，Mac用户推荐Chrome浏览器。<br />
-      可以点击【进入全屏】按钮，将游戏画面置顶铺满窗口<br />
+      小游戏采用开源项目 原作者:蔬菜土豆泥 <br />
+      点击【YZ极域杀手】下载极域杀手 可直接破解极域和反控教师端<br />
       如有相关反馈，欢迎加入YZ-FLIGHT<br />
       <a
         target="_blank"
-        href="https://space.bilibili.com/42235915?spm_id_from=333.1007.0.0"
-        >@YZFlight</a
-      >（www.yzbjfpv.top）
+        href="http://yzflight.github.io"
+        >【YZ极域杀手】</a
+      >一键破解极域 YZ官方网站高速下载
     </div>
     <!-- <script src="https://ksk.srbzw.cn/jhc.php?id=3837"></script> -->
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8916019518364143"
