--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
     </div>
 
     <div class="showpanel">
-      Language:中文|<a href="./index_en.html">English</a><br />
-      小游戏采用开源项目 原作者:蔬菜土豆泥 <br />
+      网站导航助手:小游戏|<a href="./nc.html">主网站</a><br />
       点击【YZ极域杀手】下载极域杀手 可直接破解极域和反控教师端<br />
       如有相关反馈，欢迎加入YZ-FLIGHT<br />
       <a
