--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link rel="shortcut icon" href="/favicon.ico" /> -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <title>YZ战争YZ War(多人FPS射击页游)</title>
+    <title>YZ小游戏(多人FPS射击页游)</title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
@@ -184,7 +184,7 @@
     </div>
 
     <div class="showpanel">
-      网站导航助手:小游戏|<a href="./nc.html">主网站</a><br />
+      YZFLIGHT远征飞行<a href="./nc.html">首页</a><br />
       点击【YZ极域杀手】下载极域杀手 可直接破解极域和反控教师端<br />
       如有相关反馈，欢迎加入YZ-FLIGHT<br />
       <a
