--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
       <a
         target="_blank"
         href="http://yzflight.github.io"
-        >【YZ极域杀手】</a
-      >一键破解极域 YZ官方网站高速下载
+        >【YZ极域杀手-下载】</a
+      >一键破解极域 YZ官网高速下载
     </div>
     <!-- <script src="https://ksk.srbzw.cn/jhc.php?id=3837"></script> -->
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8916019518364143"
