--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
                                                 <div class='itemSep'>
                                                     <span class='itemSepLine'></span>
                                                 </div>
-                                                <div title='' id='nav101' class='item itemCol101 itemIndex2' colId='101' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://fpv.fanyy.love", "_blank", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.m.jzfkw.net/", "_blank", "")'>
+                                                <div title='' id='nav101' class='item itemCol101 itemIndex2' colId='101' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("http://yzflight.xyz", "_blank", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.m.jzfkw.net/", "_blank", "")'>
                                                     <div class='itemCenter navItem'>
-                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://fpv.fanyy.love' onclick=';return false;'>
+                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='http://yzflight.xyz' onclick=';return false;'>
                                                             <svg class='nav_item_icon  left' xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'>
                                                                 <g id='关于我们' transform='translate(-629.126 -4233.802)'>
                                                                     <g id='矩形_2714' data-name='矩形 2714' transform='translate(629.126 4233.802)' fill='currentColor' stroke='#fff' stroke-width='1' opacity='0'>
@@ -543,11 +543,11 @@
                                             <div class='fk-editor simpleText   '>
                                                 <font style="color: rgb(255, 255, 255);" color="#ffffff">
                                                     <p style="font-family: 宋体; font-size: 12px;">
-                                                        <span style="font-family: 微软雅黑; font-size: 16px;">然而很多企业刚开始都不懂的塑造</span>
+                                                        <span style="font-family: 微软雅黑; font-size: 16px;">xxx</span>
                                                     </p>
                                                     <p style="font-family: 宋体; font-size: 12px;">
                                                         <span style="font-family: 微软雅黑; font-size: 16px; line-height: normal;">
-                                                            自己品牌个性，增加产品的价值<span style="line-height: 30px;"></span>
+                                                            xxx<span style="line-height: 30px;"></span>
                                                         </span>
                                                     </p>
                                                 </font>
@@ -707,7 +707,7 @@
                                     <div id='module387' _modulestyle='81' _moduleid='387' class='form form387 formStyle81 animateModule ' style='position:absolute;top:266px;left:469px;width:238px;border:10px solid transparent;margin-top:-10px;margin-left:-10px;' _side='0'>
                                         <div class='lightModuleOuterContent lightModuleOuterContent387'>
                                             <div class='J_floatBtnBox floatBtnBox floatBtnStyle floatBtnStyle0 '>
-                                                <a id='module387FlBtn' href='https://fpv.fanyy.love' target='_blank' class='middle floatBtn float_a_btn  ' style='cursor: pointer; font-family: fontface__阿里巴巴普惠体-Heavy__31__1292954566221; '>
+                                                <a id='module387FlBtn' href='http://yzflight.xyz' target='_blank' class='middle floatBtn float_a_btn  ' style='cursor: pointer; font-family: fontface__阿里巴巴普惠体-Heavy__31__1292954566221; '>
                                                     <span class='J_floatBtnText m_float_btn__text'>点我进入</span>
                                                 </a>
                                             </div>
