--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>YZBJFPV-404</title>
+    <title>404|Flyz远征飞</title>
 
     <style>
         html, body {
@@ -206,8 +206,8 @@
 <div class="content">
     <canvas class="snow" id="snow" width="1349" height="400"></canvas>
     <div class="main-text">
-        <h1>404 天呐！出错了 ~<br><br>很抱歉YZBJFPV给您带来不便！ (灬ꈍ ꈍ灬)</h1>
-        <div class="main-text-a"><a href="http://yzbjfpv.top/index.html">< 返回 YZBJFPV首页</a></div>
+        <h1>404 天呐！你在搞什么东西？ ~<br><br>很抱歉Flyz远征飞给您带来不便！ (灬ꈍ ꈍ灬)</h1>
+        <div class="main-text-a"><a href="http://yzbjfpv.top/index.html">< 返回首页</a></div>
     </div>
     <div class="ground">
         <div class="mound">
