--- a/hzhb.html
+++ b/hzhb.html
@@ -3,7 +3,7 @@
 <html lang="zh" class="__noGmain g_html">
 <head>
 
-<title>YZFLIGHT远征飞行官方网站</title>
+<title>合作伙伴|Flyz远征飞</title>
 <meta name="keywords" content=""/>
 <meta name="description" content=""/>
 
