--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--<html><head></head><body></body></html>-->
 <html lang="zh" class="__noGmain g_html">
     <head>
-        <title>YZFLIGHT远征飞行官方网站</title>
+        <title>首页|Flyz远征飞</title>
         <meta name="keywords" content=""/>
         <meta name="description" content=""/>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -168,8 +168,8 @@
                                         <span style="font-family: fontface__锐字云字库综艺GB__71__333999260424;">
                                             <font color="#ff6637" style="caret-color: rgb(255, 102, 55); color: rgb(255, 102, 55);"></font>
                                             <span style="color: rgb(254, 216, 53);" color="rgba(254, 216, 53, 1)">
-                                                <font style="caret-color: rgb(255, 102, 55);">YZ</font>
-                                                <font style="caret-color: rgb(204, 204, 204);">FLIGHT远征飞行官方网站</font>
+                                                <font style="caret-color: rgb(255, 102, 55);">Flyz</font>
+                                                <font style="caret-color: rgb(204, 204, 204);">远征飞官方网站</font>
                                             </span>
                                         </span>
                                     </span>
@@ -289,9 +289,9 @@
                                                 <div class='itemSep'>
                                                     <span class='itemSepLine'></span>
                                                 </div>
-                                                <div title='' id='nav103' class='item itemCol103 itemIndex4' colId='103' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbjfpv.top/1.html", "_self", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.jzfkw.net/col.jsp?id=103", "_self", "")'>
+                                                <div title='' id='nav103' class='item itemCol103 itemIndex4' colId='103' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbjfpv.top/wxtalk.html", "_self", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.jzfkw.net/col.jsp?id=103", "_self", "")'>
                                                     <div class='itemCenter navItem'>
-                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://yzbjfpv.top/1.html' onclick=';return false;'>
+                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://yzbjfpv.top/wxtalk.html' onclick=';return false;'>
                                                             <div class=' nav_item_icon left' style='background-image: url(//18946802.s61i.faiusr.com/4/AD0I8rWECRAEGAAg76jnkwYohpSlDTCwCTiwCQ.png);'></div>
                                                             <div class=' nav_item_icon nav_item_icon--active nav_item_icon--hidden left' style='background-image: url(//18946802.s61i.faiusr.com/4/AD0I8rWECRAEGAAg46jnkwYoh4HoWjCwCTiwCQ.png);'></div>
                                                             <div class='nav_item_icon_wrapper nav_item_icon--left'>
@@ -307,9 +307,9 @@
                                                 <div class='itemSep'>
                                                     <span class='itemSepLine'></span>
                                                 </div>
-                                                <div title='' id='nav102' class='item itemCol102 itemIndex5' colId='102' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbjfpv.top/2.html", "_self", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.jzfkw.net/col.jsp?id=102", "_self", "")'>
+                                                <div title='' id='nav102' class='item itemCol102 itemIndex5' colId='102' onclick='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbjfpv.top/hzhb.html", "_self", "")' _jump='JZ.setUrlArgToCookieAndJumpByWindowOpen("https://yzbj001.jzfkw.net/col.jsp?id=102", "_self", "")'>
                                                     <div class='itemCenter navItem'>
-                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://yzbjfpv.top/2.html' onclick=';return false;'>
+                                                        <a hidefocus='true' style='outline:none;' class='J_nav_item_link  nav_item_icon_link ' href='https://yzbjfpv.top/hzhb.html' onclick=';return false;'>
                                                             <svg class='nav_item_icon  left' xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'>
                                                                 <g id='联系我们' transform='translate(-673.869 -4248.96)'>
                                                                     <g id='矩形_2715' data-name='矩形 2715' transform='translate(673.869 4248.96)' fill='currentColor' stroke='#fff' stroke-width='1' opacity='0'>
@@ -793,7 +793,7 @@
                                         <div class='lightModuleOuterContent lightModuleOuterContent387'>
                                             <div class='J_floatBtnBox floatBtnBox floatBtnStyle floatBtnStyle0 '>
                                                 <a id='module387FlBtn' href='https://yzflight.xyz' target='_blank' class='middle floatBtn float_a_btn  ' style='cursor: pointer; font-family: fontface__阿里巴巴普惠体-Heavy__31__1292954566221; '>
-                                                    <span class='J_floatBtnText m_float_btn__text'>点我进入</span>
+                                                    <span class='J_floatBtnText m_float_btn__text'>立即体验</span>
                                                 </a>
                                             </div>
                                         </div>
@@ -868,8 +868,8 @@
                                                     </font>
                                                 </p>
                                                 <span style="line-height: 30px; font-size: 16px;">
-                                                    <p style="color: rgb(0, 0, 0); text-align: right;">交流群总人数700＋</p>
-                                                    <p style="color: rgb(0, 0, 0); text-align: right;">百位厂家大佬为你解决各种问题</p>
+                                                    <p style="color: rgb(0, 0, 0); text-align: right;">交流群总人数800＋</p>
+                                                    <p style="color: rgb(0, 0, 0); text-align: right;">百位厂家及大佬为你解决各种问题</p>
                                                 </span>
                                             </div>
                                         </div>
@@ -921,7 +921,7 @@
                                                 </p>
                                                 <span style="line-height: 30px;">
                                                     <p style="color: rgb(0, 0, 0); font-family: 宋体; font-size: 12px;">
-                                                        <span style="color: rgb(102, 102, 102); font-family: 微软雅黑; font-size: 16px;">群内拥有40＋厂家/经销商微信</span>
+                                                        <span style="color: rgb(102, 102, 102); font-family: 微软雅黑; font-size: 16px;">群内拥有50＋厂家/经销商微信</span>
                                                     </p>
                                                     <p style="color: rgb(0, 0, 0); font-family: 宋体; font-size: 12px;">
                                                         <span style="color: rgb(102, 102, 102); font-family: 微软雅黑; font-size: 16px;">厂家直销 价格实惠 售后无忧</span>
@@ -954,7 +954,7 @@
                                                 <div style="text-align: center;">
                                                     <font color="#ffffff">
                                                         <span style="font-size: 36px;">
-                                                            <b>欢迎加入YZFLIGHT官方微信交流群</b>
+                                                            <b>欢迎加入Flyz远征飞官方微信交流群</b>
                                                         </span>
                                                     </font>
                                                 </div>
@@ -1199,7 +1199,7 @@
                         <div id='module423' _modulestyle='86' _moduleid='423' class='form form423 formStyle86 formInZone  siteEditor ' style='position:absolute;top:350px;left:523px;width:221px;' _side='0'>
                             <div class='lightModuleOuterContent lightModuleOuterContent423'>
                                 <div class='fk-editor simpleText   '>
-                                    欢迎加入我们<div>Pok-RC是合作伙伴</div>
+                                    欢迎加入我们<div>网站更新版本:2025年2月24日</div>
                                 </div>
                             </div>
                         </div>
@@ -1215,7 +1215,7 @@
                                 <div class='middleLeft'></div>
                                 <div class='middleCenter' align='center'>
                                     <div class='footerContent'>
-                                        <div class='footerInfo footerInfoV2 J_footerInfo'>©2025 YZFLIGHT 版权所有</div>
+                                        <div class='footerInfo footerInfoV2 J_footerInfo'>©2025 Flyz远征飞 版权所有</div>
                                         <div class='footerSupport' id='footerSupport'>
                                             <span class='footerFaisco J_supportItem'>
                                                 本站使用
@@ -1223,9 +1223,9 @@
                                                     <svg id='faisco-icons-logo' class='toolbar_site_logo' style='width: 22px; height: 16px; padding-left:2px;position:relative; top: 3px;'>
                                                         <use xlink:href='#icon_site_logo_no_color'></use>
                                                     </svg>
-                                                    凡科建站
+                                                    什么也没有
                                                 </a>
-                                                <span style='padding-left:8px;' class='J_buildText'>搭建</span>
+                                                <span style='padding-left:8px;' class='J_buildText'>自己搭建</span>
                                             </span>
                                             <span class='footerSep J_footerSep footerIpv6Step' style='display:none;'>|</span>
                                             <span id='footerIpv6' class='footerIpv6 J_supportItem' style='position:relative;display:none;'>
