--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
                                             <span style="font-size: 14px; color: rgb(169, 169, 169);">微信号：YGWFK2024</span>
                                         </p>
                                         <p style="color: rgb(169, 169, 169); font-family: 宋体; font-size: 12px; text-align: center;">
-                                            <span style="font-family: 微软雅黑; font-size: 14px;">邮箱/Mail：yz@pokrc.com</span>
+                                            <span style="font-family: 微软雅黑; font-size: 14px;">网站始建于2024年7月21日</span>
                                         </p>
                                     </span>
                                 </div>
@@ -1199,7 +1199,7 @@
                         <div id='module423' _modulestyle='86' _moduleid='423' class='form form423 formStyle86 formInZone  siteEditor ' style='position:absolute;top:350px;left:523px;width:221px;' _side='0'>
                             <div class='lightModuleOuterContent lightModuleOuterContent423'>
                                 <div class='fk-editor simpleText   '>
-                                    欢迎加入我们<div>网站更新版本:2025年2月24日</div>
+                                    欢迎加入我们<div>网站更新版本:2025年5月1日</div>
                                 </div>
                             </div>
                         </div>
@@ -1218,14 +1218,14 @@
                                         <div class='footerInfo footerInfoV2 J_footerInfo'>©2025 Flyz远征飞 版权所有</div>
                                         <div class='footerSupport' id='footerSupport'>
                                             <span class='footerFaisco J_supportItem'>
-                                                本站使用
-                                                <a class='J_supportLink' hidefocus='true' href='//jz.fkw.com?_ta=2524' onclick='Site.logDog(100065, 0);' target='_blank'>
+                                                感谢
+                                                <a class='J_supportLink' hidefocus='true' href='//_ta=2524' onclick='Site.logDog(100065, 0);' target='_blank'>
                                                     <svg id='faisco-icons-logo' class='toolbar_site_logo' style='width: 22px; height: 16px; padding-left:2px;position:relative; top: 3px;'>
                                                         <use xlink:href='#icon_site_logo_no_color'></use>
                                                     </svg>
-                                                    什么也没有
+                                                    魄客模型 翼效架构 飞阅传媒 通辽大疆 嘟嘟电池 黑手电池 极限电池 Ln_电机 翰云FPV工作室…
                                                 </a>
-                                                <span style='padding-left:8px;' class='J_buildText'>自己搭建</span>
+                                                <span style='padding-left:8px;' class='J_buildText'>提供赞助与支持</span>
                                             </span>
                                             <span class='footerSep J_footerSep footerIpv6Step' style='display:none;'>|</span>
                                             <span id='footerIpv6' class='footerIpv6 J_supportItem' style='position:relative;display:none;'>
