--- a/index.html
+++ b/index.html
@@ -575,8 +575,8 @@
                                                     <span style="background-color: transparent;">
                                                         <span style="font-size: 26px;">
                                                             <b>
-                                                                <font style="color: rgb(255, 101, 55);" color="#ff6537">很抱歉</font>
-                                                                <font color="#000000" style="caret-color: rgb(0, 0, 0);">网站于2025年5月1起停止运营 下载站将于2025年12月1日停运</font>
+                                                                <font style="color: rgb(255, 101, 55);" color="#ff6537">正在备战2026中考中</font>
+                                                                <font color="#000000" style="caret-color: rgb(0, 0, 0);">网站停止更新，祝我考上北京四中</font>
                                                             </b>
                                                         </span>
                                                     </span>
