--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 <!-- 轮播图（自动生成15张） -->
 <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
-        <!-- 自动生成1-15张轮播图，序号和说明自动递增 -->
-        ${Array.from({length:15}, (_,i) => `
+        <!-- 自动生成1-15张轮播图，序号和说明自动
         <div class="carousel-item ${i===0?'active':''}">
             <img src="https://img520.com/uHGach.jpeg" alt="航模电池宣传图${i+1}" class="carousel-img">
             <div class="carousel-caption d-none d-md-block">
