--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flyz远征飞官方网站</title>
+    <title>首页｜Flyz远征飞·PokRC魄客模型官网</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .navbar { background: #fff; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
@@ -20,11 +20,11 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="https://img520.com/UIGuUV.jpeg" alt="Logo" class="logo-img"></a>
         <div class="navbar-nav ms-auto">
-            <a class="nav-link active" href="#home">首页</a>          <!-- 首页链接 -->
-            <a class="nav-link" href="#product">产品中心</a>      <!-- 产品页链接 -->
-            <a class="nav-link" href="#custom">定制服务</a>      <!-- 定制页链接 -->
-            <a class="nav-link" href="#news">资讯动态</a>        <!-- 资讯页链接 -->
-            <a class="nav-link" href="#contact">联系我们</a>      <!-- 联系页链接 -->
+            <a class="nav-link active" href="https://yzbjfpv.top/index.html">首页</a>          <!-- 首页链接 -->
+            <a class="nav-link" href="https://yzflight.xyz">下载中心</a>      <!-- Fanyy下载站链接 -->
+            <a class="nav-link" href="https://shop500685313.taobao.com">严选商城</a>      <!-- 淘宝合作店铺链接 -->
+            <a class="nav-link" href="https://yzbjfpv.top/index.html">合作伙伴</a>        <!-- 赞助商链接 -->
+            <a class="nav-link" href="https://yzbjfpv.top/index.html">加入我们</a>      <!-- 联系方式进群链接 -->
         </div>
     </div>
 </nav>
@@ -57,8 +57,8 @@
         <!-- 核心技术 -->
         <div class="col-md-4">
             <div class="feature-card p-3">
-                <h4 class="text-primary">核心技术</h4>
-                <p>21700锂离子电芯<br>放电倍率完胜全场<br>持续35C放电（峰值更高）</p>
+                <h4 class="text-primary">核心卖点</h4>
+                <p>21700锂离子电芯<br>放电倍率超越市面上90%的电池<br>持续35C放电（峰值更高）</p>
             </div>
         </div>
         <!-- 定制服务 -->
@@ -81,7 +81,7 @@
 <!-- 底部栏 -->
 <footer class="bg-light p-4 mt-5">
     <div class="container text-center">
-        <p>© 2025 Flyz远征飞官方网站 版本V3.0.1</p>
+        <p>© 2025 Flyz远征飞•PokRC魄客模型官方网站 版本V3.0.1</p>
         <p>加我微信进全国大佬交流群 | 微信号 YGWFK2024</p>
         <div class="mt-3">
             <a href="https://b23.tv/JXuI9QA" class="me-3">哔哩哔哩｜Flyz远征飞</a>
