Update and rename index1.html to oldindex.html

--- a/oldindex.html
+++ b/oldindex.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta name="applicable-device" content="pc" />
-        <title>YZ-Flight </title>
+        <title>旧版|YZBJFPV官网</title>
 
     <style>
         /* 加上 -webkit- 注意兼容 */
