--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首页｜Flyz远征飞·PokRC魄客模型官网</title>
+    <title>首页｜Flyz远征飞™官网</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .navbar { background: #fff; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
@@ -52,27 +52,27 @@
 
 <!-- 产品卖点 -->
 <div class="container my-5">
-    <h2 class="text-center mb-4">Pokrc × Flyz联名出品 | 远航级航模电池</h2>
+    <h2 class="text-center mb-4">PokRC魄客模型® × Flyz远征飞™联名出品 | 远航级高放电硬壳航模电池</h2>
     <div class="row g-4">
         <!-- 核心技术 -->
         <div class="col-md-4">
             <div class="feature-card p-3">
                 <h4 class="text-primary">核心卖点</h4>
-                <p>21700锂离子电芯<br>放电倍率超越市面上90%的电池<br>持续35C放电（峰值更高）</p>
+                <p>Bak-battery®21700锂离子电芯<br>放电倍率超越市面上98%的远航电池<br>持续35C放电（峰值更高）</p>
             </div>
         </div>
         <!-- 定制服务 -->
         <div class="col-md-4">
             <div class="feature-card p-3">
                 <h4 class="text-primary">灵活定制</h4>
-                <p>1-8S电压随意组合<br>18650/21700锂聚合物电芯<br>支持输出端接口定制</p>
+                <p>1-16S电压均支持定制<br>21700高性能锂离子电芯<br>支持输出端接口私人定制</p>
             </div>
         </div>
         <!-- 方便易用 -->
         <div class="col-md-4">
             <div class="feature-card p-3">
                 <h4 class="text-primary">方便易用</h4>
-                <p>UN38.3/MSDS认证<br>电池集成电压显示<br>随时查看单芯电压</p>
+                <p>UN38.3/MSDS认证<br>电池集成电压显示<br>随时查看单芯电压<br>杜绝电池过放造成损坏</p>
             </div>
         </div>
     </div>
@@ -81,7 +81,7 @@
 <!-- 底部栏 -->
 <footer class="bg-light p-4 mt-5">
     <div class="container text-center">
-        <p>© 2025 Flyz远征飞•PokRC魄客模型官方网站 版本V3.0.1</p>
+        <p>© 2025 Flyz远征飞•PokRC魄客模型官方网站 版本V3.0.2</p>
         <p>加我微信进全国大佬交流群 | 微信号 YGWFK2024</p>
         <div class="mt-3">
             <a href="https://b23.tv/JXuI9QA" class="me-3">哔哩哔哩｜Flyz远征飞</a>
