--- a/yzbirthday.html
+++ b/yzbirthday.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>YZ生日快乐 - 全屏沉浸式特效</title>
+    <title>YZ生日快乐！</title>
     <!-- 3D动画库 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <!-- 粒子特效库 -->
