--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首页｜Flyz远征飞·PokRC魄客模型官网</title>
+    <title>首页｜Flyz远征飞官方网站</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .navbar { background: #fff; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
@@ -20,11 +20,11 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="https://img520.com/UIGuUV.jpeg" alt="Logo" class="logo-img"></a>
         <div class="navbar-nav ms-auto">
-            <a class="nav-link active" href="https://yzbjfpv.top/index.html">首页</a>          <!-- 首页链接 -->
-            <a class="nav-link" href="https://yzbjfpv.top/down.html">下载中心</a>      <!-- Fanyy下载站链接 -->
+            <a class="nav-link active" href="http://yzbjfpv.top/index.html">首页</a>          <!-- 首页链接 -->
+            <a class="nav-link" href="http://yzbjfpv.top/down.html">下载中心</a>      <!-- Fanyy下载站链接 -->
             <a class="nav-link" href="https://shop500685313.taobao.com">严选商城</a>      <!-- 淘宝合作店铺链接 -->
-            <a class="nav-link" href="https://yzbjfpv.top/index.html">合作伙伴</a>        <!-- 赞助商链接 -->
-            <a class="nav-link" href="https://yzbjfpv.top/index.html">加入我们</a>      <!-- 联系方式进群链接 -->
+            <a class="nav-link" href="http://yzbjfpv.top/hzhb.html">合作伙伴</a>        <!-- 赞助商链接 -->
+            <a class="nav-link" href="http://yzbjfpv.top/wxtalk.html">加入微信全国大佬交流群</a>      <!-- 联系方式进群链接 -->
         </div>
     </div>
 </nav>
@@ -58,14 +58,14 @@
         <div class="col-md-4">
             <div class="feature-card p-3">
                 <h4 class="text-primary">核心卖点</h4>
-                <p>21700锂离子电芯<br>放电倍率超越市面上90%的电池<br>持续35C放电（峰值更高）</p>
+                <p>21700硬壳锂离子电芯<br>放电倍率超越市面上90%的电池<br>持续35C放电（3秒峰值40C）</p>
             </div>
         </div>
         <!-- 定制服务 -->
         <div class="col-md-4">
             <div class="feature-card p-3">
                 <h4 class="text-primary">灵活定制</h4>
-                <p>1-8S电压随意组合<br>18650/21700锂聚合物电芯<br>支持输出端接口定制</p>
+                <p>1-8S电压随意组合<br>18650/21700锂聚合物电芯<br>支持电池输出端接口定制</p>
             </div>
         </div>
         <!-- 方便易用 -->
@@ -81,11 +81,11 @@
 <!-- 底部栏 -->
 <footer class="bg-light p-4 mt-5">
     <div class="container text-center">
-        <p>© 2025 Flyz远征飞•PokRC魄客模型官方网站 版本V3.0.1</p>
-        <p>加我微信进全国大佬交流群 | 微信号 YGWFK2024</p>
+        <p>© 2025 Flyz远征飞官方网站 V3.0.4版</p>
+        <p>加我进全国大佬交流群 | 微信号 YGWFK2024</p>
         <div class="mt-3">
             <a href="https://b23.tv/JXuI9QA" class="me-3">哔哩哔哩｜Flyz远征飞</a>
-            <a href="https://b23.tv/M4vpvaz" class="me-3">哔哩哔哩｜PokRC魄客模型</a>
+            <a href="http://yzbjfpv.top/oldindex.html" class="me-3">YZBJFPV旧版网站｜2024年8月版</a>
         </div>
     </div>
 </footer>
