--- a/new.html
+++ b/new.html
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
             <!-- 动态标题 -->
-            <div class="dynamic-title">Flyz远征飞官方网站</div>
+            <div class="dynamic-title">Flyz远征飞官网</div>
             
             <!-- 原有导航内容 -->
             <a class="navbar-brand" href="#"><img src="https://img520.com/UIGuUV.jpeg" alt="Logo" class="logo-img"></a>
