--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <a class="nav-link active" href="http://yzbjfpv.top/index.html" data-translate="yes">首页</a>
                 <a class="nav-link" href="http://yzbjfpv.top/down.html" data-translate="yes">下载中心</a>
                 <a class="nav-link" href="https://shop500685313.taobao.com" data-translate="yes">严选商城</a>
-                <a class="nav-link" href="http://yzbjfpv.top/hzhb.html" data-translate="yes">合作伙伴</a>
+                <a class="nav-link" href="http://yzbjfpv.top/sbjiyu.html" data-translate="yes">极域杀手</a>
                 <a class="nav-link" href="http://yzbjfpv.top/wxtalk.html" data-translate="yes">加入交流群</a>
             </div>
         </div>
