--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container-fluid">
-            <div class="dynamic-title" data-translate="yes">Flyz远征飞官网</div>
+            <div class="dynamic-title" data-translate="yes">Flyz远征飞</div>
             
             <a class="navbar-brand" href="#"><img src="https://img520.com/UIGuUV.jpeg" alt="Flyz FPV穿越机电池 logo" class="logo-img" data-translate="yes"></a>
             <div class="navbar-nav ms-auto">
