--- a/down.html
+++ b/down.html
@@ -18,11 +18,11 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="https://img520.com/UIGuUV.jpeg" alt="Logo" class="logo-img"></a>
         <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="http://yzbjfpv.top/index.html">首页</a>
-            <a class="nav-link active" href="http://yzbjfpv.top/down.html">下载中心</a>
+            <a class="nav-link" href="https://yzbjfpv.top/index.html">首页</a>
+            <a class="nav-link active" href="https://yzbjfpv.top/down.html">下载中心</a>
             <a class="nav-link" href="https://shop500685313.taobao.com">严选商城</a>
-            <a class="nav-link" href="https://yzbjfpv.top/index.html">合作伙伴</a>
-            <a class="nav-link" href="https://yzbjfpv.top/index.html">加入我们</a>
+            <a class="nav-link" href="http://yzflight.github.io">合作伙伴</a>
+            <a class="nav-link" href="https://yzbjfpv.top/wxtalk.html">加我WX</a>
         </div>
     </div>
 </nav>
