--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <a class="nav-link active" href="https://yzbjfpv.top/index.html" data-translate="yes">首页</a>
                 <a class="nav-link" href="https://yzbjfpv.top/down.html" data-translate="yes">下载中心</a>
                 <a class="nav-link" href="https://shop500685313.taobao.com" data-translate="yes">严选商城</a>
-                <a class="nav-link" href="http://yzflight.xyz" data-translate="yes">极域杀手</a>
-                <a class="nav-link" href="https://yzbjfpv.top/wxtalk.html" data-translate="yes">加入交流群</a>
+                <a class="nav-link" href="http://yzflight.github.io" data-translate="yes">极域杀手</a>
+                <a class="nav-link" href="https://yzbjfpv.top/wxtalk.html" data-translate="yes">加我WX</a>
             </div>
         </div>
     </nav>
