--- a/down.html
+++ b/down.html
@@ -29,7 +29,7 @@
 
 <!-- 下载中心主体 -->
 <div class="download-container container">
-    <h2 class="text-center mb-5">Flyz远征飞™下载中心</h2>
+    <h2 class="text-center mb-5">因技术和资金问题 下载站已关闭 每年运行费用高达180元 我们将考虑开启用户付费下载运营模式或赞助商广告费运营模式 网页可能将会有广告 敬请谅解</h2>
     <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-frame" src="http://yzflight.xyz" allowfullscreen></iframe>
     </div>
@@ -38,8 +38,8 @@
 <!-- 底部栏（与首页保持一致） -->
 <footer class="bg-light p-4 mt-5">
     <div class="container text-center">
-        <p>© 2025 Flyz远征飞•PokRC魄客模型官方网站 版本V3.0.2</p>
-        <p>加我微信进全国大佬交流群 | 微信号 YGWFK2024</p>
+        <p>© 2025 Flyz远征飞官方网站 下载中心版本V3.0.2</p>
+        <p>广告商加我微信投广 价格0.18元每天 | 微信号 YGWFK2024</p>
         <div class="mt-3">
             <a href="https://b23.tv/JXuI9QA" class="me-3">哔哩哔哩｜Flyz远征飞</a>
             <a href="https://b23.tv/M4vpvaz" class="me-3">哔哩哔哩｜PokRC魄客模型</a>
