--- a/dj.html
+++ b/dj.html
@@ -16,7 +16,7 @@
             background-color: #f8f5f0;
             color: #333;
             line-height: 1.6;
-            background-image: url('https://img520.com/3VSr5U.jpeg');
+            background-image: url('');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
