--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>登录|八(6)结业式🎓</title>
+    <title>登录|Flyz远征飞官网</title>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
     <style>
@@ -122,14 +122,14 @@
                 gsap.to(points.scale, {x: 10, y: 10, z: 10, duration: 2, ease: 'power2.out', onComplete: () => points.scale.set(1,1,1)});
             }
 
-            // 登录逻辑
+            // 逻辑
             const form = document.getElementById('login-form');
             form.addEventListener('submit', e => {
                 e.preventDefault();
                 const pass = form.querySelector('input[type="password"]').value;
-                if (pass === '86') {
+                if (pass === '1yu92') {
                     fireworks(innerWidth/2, innerHeight/2);
-                    setTimeout(() => location.href = 'https://yzbjfpv.top/86.html', 2000);
+                    setTimeout(() => location.href = 'https://yzbjfpv.top/tianxian.html', 1000);
                 }
             });
 
