Update and rename login.html to index.html

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             form.addEventListener('submit', e => {
                 e.preventDefault();
                 const pass = form.querySelector('input[type="password"]').value;
-                if (pass === '1yu92') {
+                if (pass === 'YZBJFPV') {
                     fireworks(innerWidth/2, innerHeight/2);
                     setTimeout(() => location.href = 'https://yzbjfpv.top/tianxian.html', 1000);
                 }
