--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 const pass = form.querySelector('input[type="password"]').value;
                 if (pass === 'YZBJFPV') {
                     fireworks(innerWidth/2, innerHeight/2);
-                    setTimeout(() => location.href = 'https://yzbjfpv.top/tianxian.html', 1000);
+                    setTimeout(() => location.href = 'https://yzbjfpv.top/20250709.html', 1000);
                 }
             });
 
