--- a/down.html
+++ b/down.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="https://img520.com/UIGuUV.jpeg" alt="Logo" class="logo-img"></a>
         <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="https://yzbjfpv.top/index.html">首页</a>
+            <a class="nav-link" href="https://yzbjfpv.top/20250709.html">首页</a>
             <a class="nav-link active" href="https://yzbjfpv.top/down.html">下载中心</a>
             <a class="nav-link" href="https://shop500685313.taobao.com">严选商城</a>
             <a class="nav-link" href="http://yzflight.github.io">合作伙伴</a>
@@ -29,7 +29,7 @@
 
 <!-- 下载中心主体 -->
 <div class="download-container container">
-    <h2 class="text-center mb-5">因技术和资金问题 下载站已关闭 每年运行费用高达180元 我们将考虑开启用户付费下载运营模式或赞助商广告费运营模式 网页可能将会有广告 敬请谅解</h2>
+    <h2 class="text-center mb-5">2025年7月20人开放 因技术和资金问题 下载站已自2025年5月关闭 每年运行费用高达180元 我们将考虑开启用户付费下载运营模式或赞助商广告费运营模式 网页可能将会有广告 敬请谅解</h2>
     <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-frame" src="http://yzflight.xyz" allowfullscreen></iframe>
     </div>
