--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
     <div id="threejs-container" style="position:fixed;width:100%;height:100%;top:0;left:0;z-index:1;"></div>
     <div class="login-card">
-        <h2 class="title-animation text-center mb-8">八(6)班结业式🎓</h2>
+        <h2 class="title-animation text-center mb-8">远征飞-魄客模型-翼新模型</h2>
         <form id="login-form" class="space-y-6">
             <input type="text" class="form-input" placeholder="用户名">
             <input type="password" class="form-input" placeholder="密码">
