--- a/20250709.html
+++ b/20250709.html
@@ -72,7 +72,7 @@
             <a class="navbar-brand" href="#"><img src="https://img520.com/UIGuUV.jpeg" alt="Flyz FPV穿越机电池 logo" class="logo-img" data-translate="yes"></a>
             <div class="navbar-nav ms-auto">
                 <a class="nav-link active" href="https://yzbjfpv.top/20250709.html" data-translate="yes">首页</a>
-                <a class="nav-link" href="http://yzflight.xyz’" data-translate="yes">下载中心</a>
+                <a class="nav-link" href="http://yzflight.xyz" data-translate="yes">下载中心</a>
                 <a class="nav-link" href="https://shop500685313.taobao.com" data-translate="yes">严选商城</a>
                 <a class="nav-link" href="http://yzflight.github.io" data-translate="yes">极域杀手</a>
                 <a class="nav-link" href="https://yzbjfpv.top/wxtalk.html" data-translate="yes">加我WX</a>
