--- a/fix.html
+++ b/fix.html
@@ -435,8 +435,8 @@
                     </div>
                     <div>
                         <h3 class="font-bold text-lg mb-1">微信咨询</h3>
-                        <p class="text-gray-600">FlyzRepair</p>
-                        <p class="text-gray-500 text-sm">添加客服微信</p>
+                        <p class="text-gray-600">Flyz远征飞官方</p>
+                        <p class="text-gray-500 text-sm">添加总监/客服微信</p>
                     </div>
                 </div>
             </div>
