--- a/fix.html
+++ b/fix.html
@@ -125,7 +125,7 @@
                         专业<span class="text-secondary">维修师傅</span>团队
                     </h1>
                     <p class="text-xl md:text-2xl mb-8 text-white/80">
-                        汇聚业内资深航模维修专家，精准解决各类设备故障，让您的飞行装备重焕活力
+                        汇聚业内资深航模维修专家，精准解决各类设备故障，Flyz远征飞平台全程担保
                     </p>
                     <div class="flex flex-wrap gap-4">
                         <a href="#mechanics" class="bg-secondary hover:bg-secondary/90 text-white font-bold py-3 px-8 rounded-full transition-all duration-300 hover-lift">
