--- a/fix.html
+++ b/fix.html
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2 flex justify-center">
-                    <img src="https://picsum.photos/600/400?random=3" alt="航模维修展示" 
+                    <img src="https://www.img520.com/3400Tj.jpg" alt="航模维修展示" 
                          class="rounded-lg shadow-2xl hover-lift max-w-full h-auto">
                 </div>
             </div>
